; ModuleID = '/home/carl/AnghaBench/linux/drivers/pci/controller/dwc/extr_pci-layerscape.c_ls_pcie_clear_multifunction.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/pci/controller/dwc/extr_pci-layerscape.c_ls_pcie_clear_multifunction.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ls_pcie = type { %struct.dw_pcie* }
%struct.dw_pcie = type { i64 }

@PCI_HEADER_TYPE_BRIDGE = common dso_local global i32 0, align 4
@PCI_HEADER_TYPE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ls_pcie*)* @ls_pcie_clear_multifunction to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ls_pcie_clear_multifunction(%struct.ls_pcie* %0) #0 {
  %2 = alloca %struct.ls_pcie*, align 8
  %3 = alloca %struct.dw_pcie*, align 8
  store %struct.ls_pcie* %0, %struct.ls_pcie** %2, align 8
  %4 = load %struct.ls_pcie*, %struct.ls_pcie** %2, align 8
  %5 = getelementptr inbounds %struct.ls_pcie, %struct.ls_pcie* %4, i32 0, i32 0
  %6 = load %struct.dw_pcie*, %struct.dw_pcie** %5, align 8
  store %struct.dw_pcie* %6, %struct.dw_pcie** %3, align 8
  %7 = load i32, i32* @PCI_HEADER_TYPE_BRIDGE, align 4
  %8 = load %struct.dw_pcie*, %struct.dw_pcie** %3, align 8
  %9 = getelementptr inbounds %struct.dw_pcie, %struct.dw_pcie* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = load i64, i64* @PCI_HEADER_TYPE, align 8
  %12 = add nsw i64 %10, %11
  %13 = call i32 @iowrite8(i32 %7, i64 %12)
  ret void
}

declare dso_local i32 @iowrite8(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
